<resources>
    <string name="app_name">Taguig</string>
    <string name="facebook_app_id" translatable="false">2533284370271987</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2533284370271987</string>
    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>

    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>


    </string-array>

    <string-array name="years">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="requests" translatable="false">Requests</string>
    <string name="broadcast_and_announcements" translatable="false">Broadcast and Announcements</string>
    <string name="view_all" translatable="false">View All</string>
    <string name="in_taguig_city" translatable="false">In \"Taguig City\"</string>
    <string name="in_phillipines" translatable="false">In Phillipines</string>
    <string name="important_updates" translatable="false">Important Updates</string>
    <string name="track_covid19_and_updates" translatable="false">Track Covid19 and Updates</string>
    <string name="know_more" translatable="false">Know More</string>
    <string name="text1" translatable="false">175 Doña Soledad Ave Better Living Subdivision, Parañaque, 1711 Metro Manila, Philippines</string>
    <string name="tvAddress" translatable="false">175 Doña Soledad Ave Better Living Subdivision, Parañaque, 1711 Metro Manila, Philippines</string>
    <string name="hospital_detail" translatable="false">175 Doña Soledad Ave Better Living Subdivision, Parañaque, 1711 Metro Manila, Philippines</string>

    <integer name="photo_list_preview_columns">3</integer>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="tvQuestion" translatable="false">Our Govt has clear direction in using social media for Public Policy</string>
    <string name="tv3" translatable="false">Please Provide your valuable comments on how govt. can Improve use of Social media to increase the reach of Public</string>
    <string name="action_settings">Settings</string>


    <string name="pick_image_intent_text">Pick Image From</string>
</resources>
