<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/friends" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/report" />

    <item
        android:id="@+id/navigation_service_provider"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/chat" />

</menu>