<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultscreen"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important_updates"
        android:textSize="16sp"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/impUpdatesRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <!--Track covid19 and updates-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_covid19_and_updates"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/knowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/know_more"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <!--In Phillipines-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_phillipines"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/confirmed_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirmed"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1045 (+16)"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/active_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Active"
                    android:textSize="12sp"
                    android:textColor="@color/colorActiveBlue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="933"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorActiveBlue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/recovered_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recovered"
                    android:textSize="12sp"
                    android:textColor="@color/colorActiveGreen"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="86 (+1)"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorActiveGreen"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/deceased_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deceased"
                    android:textSize="12sp"
                    android:textColor="@color/colorGray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="26 (+2)"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorGray"/>


            </LinearLayout>


        </LinearLayout>

        <!--In Taguig city-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_taguig_city"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/confirmed_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirmed"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21 (+8)"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/active_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Active"
                    android:textSize="12sp"
                    android:textColor="@color/colorActiveBlue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorActiveBlue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/recovered_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recovered"
                    android:textSize="12sp"
                    android:textColor="@color/colorActiveGreen"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorActiveGreen"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/deceased_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deceased"
                    android:textSize="12sp"
                    android:textColor="@color/colorGray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorGray"/>


            </LinearLayout>


        </LinearLayout>

        <!--Broadcast and announcements-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broadcast_and_announcements"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/viewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorWhite">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/broadcastAnnouncementRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>
